added footer section

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.12/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
+    <!-- font-awesome -->
+    <script src="https://kit.fontawesome.com/9707f43bdc.js" crossorigin="anonymous"></script>
     <!-- font link -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -62,6 +64,82 @@
         </section>
         <section id="phone-container"></section>
     </main>
+    <footer class="bg-gray-50 py-10">
+        <div class="container mx-auto px-4">
+            <!-- Top Section: Logo, Social Media, and Button -->
+            <div class="flex justify-between items-center mb-8">
+                <!-- Logo and Tagline -->
+                <div>
+                    <h2 class="text-3xl font-bold text-gray-900">Hot Gadgets</h2>
+                    <p class="text-gray-500">You can definitely work.</p>
+                </div>
+
+                <!-- Social Media Icons -->
+                <div class="flex space-x-4">
+                    <a href="#" class="text-gray-400 hover:text-blue-500">
+                        <i class="fab fa-facebook-f"></i>
+                    </a>
+                    <a href="#" class="text-gray-400 hover:text-blue-500">
+                        <i class="fab fa-twitter"></i>
+                    </a>
+                    <a href="#" class="text-gray-400 hover:text-blue-500">
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                </div>
+
+                <!-- Premium Button -->
+                <div>
+                    <a href="#"
+                        class="px-5 py-2 bg-blue-500 text-white rounded-md hover:bg-blue-600 transition duration-300">
+                        Join Premium
+                    </a>
+                </div>
+            </div>
+
+            <!-- Links Section: Grid Layout -->
+            <div class="grid grid-cols-4 gap-8 text-gray-700">
+                <div>
+                    <h3 class="font-semibold mb-3">Product</h3>
+                    <ul>
+                        <li><a href="#" class="hover:underline">Browse jobs</a></li>
+                        <li><a href="#" class="hover:underline">Remote jobs</a></li>
+                        <li><a href="#" class="hover:underline">Startup jobs</a></li>
+                        <li><a href="#" class="hover:underline">Company jobs</a></li>
+                    </ul>
+                </div>
+
+                <div>
+                    <h3 class="font-semibold mb-3">Popular</h3>
+                    <ul>
+                        <li><a href="#" class="hover:underline">UI/UX Design</a></li>
+                        <li><a href="#" class="hover:underline">Product Design</a></li>
+                        <li><a href="#" class="hover:underline">Back-End Developer</a></li>
+                        <li><a href="#" class="hover:underline">Front-End Developer</a></li>
+                    </ul>
+                </div>
+
+                <div>
+                    <h3 class="font-semibold mb-3">Resource</h3>
+                    <ul>
+                        <li><a href="#" class="hover:underline">FAQ</a></li>
+                        <li><a href="#" class="hover:underline">Support</a></li>
+                        <li><a href="#" class="hover:underline">Privacy Policy</a></li>
+                        <li><a href="#" class="hover:underline">Terms of Service</a></li>
+                    </ul>
+                </div>
+
+                <div>
+                    <h3 class="font-semibold mb-3">Company</h3>
+                    <ul>
+                        <li><a href="#" class="hover:underline">About Us</a></li>
+                        <li><a href="#" class="hover:underline">Contact Us</a></li>
+                        <li><a href="#" class="hover:underline">Career Tips</a></li>
+                        <li><a href="#" class="hover:underline">Careers</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
     <script src="./script.js"></script>
 </body>
 
