--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <div id="phone-container" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 mb-4"></div>
 
             <!-- dynamic card  -->
-            <div class="flex justify-center"><button onclick="handelShowAll()"
+            <div id="show-all-btn" class="flex justify-center"><button onclick="handelShowAll()"
                     class=" px-10 py-4 bg-[#0D6EFD] rounded-md text-white font-bold">Show
                     All</button></div>
         </section>
